[package]
name = "pithos"
version = "0.1.0"
edition = "2024"
authors = ["Srujan Gangoor <srujan964@gmail.com>"]

[dependencies]
bytes="1.11.1"
thiserror="2.0.18"
crc32fast = "1.5.0"
crossbeam-skiplist = "0.1.3"
parking_lot = "0.12.5"
arc-swap = "1.9.1"
ouroboros = "0.18.5"
seahash = "4.1.0"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
temp-dir="0.2.0"
pretty_assertions = "1.4.1"
